[package]
name = "swapvec"
version = "0.2.0"
edition = "2021"
authors = ["Julian Büttner <git@julianbuettner.dev>"]
license = "MIT"
repository = "https://github.com/julianbuettner/swapvec"
readme = "README.md"
description = "A Vector swapping to disk after exceeding a given length"

[dependencies]
bincode = "1.3.3"
lz4_flex = "0.10.0"
miniz_oxide = "0.7.1"
serde = "1.0.160"
tempfile = "3.5.0"

[lib]
name = "swapvec"
crate-type = ["lib"]
